# cli-tool

./: Cargo.toml  readme.md
src/: main.rs
wallet/: wallet.key
