[package]
name = "cli-tool"
version = "0.1.0"
edition = "2021"

[dependencies]

# add cosmos-rs from FP Complete
cosmos = { git = "https://github.com/anakinzhed/cosmos-rs" }

# command params
clap = { version = "4.5.19", features = ["derive"] }

# handle logs and errors
anyhow = "1.0.89"
log = "0.4"
fern = "0.6"
chrono = "0.4"

# regular expresion
regex = "1.11.0"

# tokio for async
tokio = { version = "1", features = ["full"] }

# send json response
serde = { version = "1", features = ["derive"] }
serde_json = "1"