[package]
name = "cli-tool"
version = "0.1.0"
edition = "2021"

[dependencies]

# add cosmos-rs from FP Complete
cosmos = { git = "https://github.com/anakinzhed/cosmos-rs" }

# command params
clap = { version = "4.5", features = ["derive", "env"] }

# Errors
anyhow = "1.0.89"

# Logging
tracing = "0.1.40"
tracing-subscriber = "0.3"

# tokio for async
tokio = { version = "1.40.0", features = ["full"] }

# send json response
serde = { version = "1", features = ["derive"] }
serde_json = "1"